--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock,Paper,Scissors</title>
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
+    
+    <div class="container">
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+</div>
     <div class="result"></div>
     <div class="score"></div>
     <div class="announce"></div>
+<footer>Art by RicoDZ</footer>
 </body>
 <script src="script.js"></script>
 
